# WEB_HW-13_2

REST_API/phonebook/: pyproject.toml
REST_API/phonebook/src/conf/: config.py
REST_API/phonebook/src/repository/: contacts.py  users.py
REST_API/phonebook/src/routes/: auth.py  users.py
phonebook/: main.py
phonebook/src/conf/: config.py
phonebook/src/repository/: users.py
phonebook/src/routes/: auth.py  contacts.py  users.py
phonebook/src/services/: auth.py  email.py
