[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = ""
authors = ["Zpfamily <65131398+Zpfamily@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
multipart = "^0.2.4"
fastapi = "^0.110.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
starlette = "^0.37.2"
redis = "^5.0.3"
cloudinary = "^1.39.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
